html tag 수정 및  연습할 test 파일 생성

--- a/html tag.html
+++ b/html tag.html
@@ -7,23 +7,23 @@
     </head>
         <!--h1~h6 태그-->
         <!--제목이나 주제와 같은 성격의 텍스트를 나타 낼때-->
-        <h1>h1 tag</h1><!--제일 강조된 텍스트 검색엔진에서 영향을 받기에 중요 받고 h1은 한번만 사용되어야함-->
-        <h2>h2 tag</h2>
-        <h3>h3 tag</h3>
-        <h4>h4 tag</h4><!--주로 여기까지만 사용-->
-        <h5>h5 tag</h5>
-        <h6>h6 tag</h6><!-- 제일 덜 강조된 텍스트-->
+        <h1>제목 1</h1><!--제일 강조된 텍스트 검색엔진에서 영향을 받기에 중요 받고 h1은 한번만 사용되어야함-->
+        <h2>제목 2</h2>
+        <h3>제목 3</h3>
+        <h4>제목 4</h4><!--주로 여기까지만 사용-->
+        <h5>제목 5</h5>
+        <h6>제목 6</h6><!-- 제일 덜 강조된 텍스트-->
         <!--p 태그-->
         <!--문장을 나타낼 때 사용-->
-        <p>p tag 문장 문단을 나타내는 기본</p>
+        <p>문장 문단을 나타내는 기본</p>
         <!--br 태그 줄바꿈하는 태그-->
         <p>줄바꿈을 <br> 할께요 </p>
         <!--blockquote 태그-->
         <!--인용문을 나타내는 태그-->
         <!--cite 속성으로 사이트 주소를 -->
-        <blockquote cite="https://ko.wikipedia.org/wiki/HTML">인용된 내용</blockquote>
+        <blockquote cite="https://ko.wikipedia.org/wiki/HTML">https://ko.wikipedia.org/wiki/HTML 인용된 내용</blockquote>
         <!--q태그은 작은 인용문을 나타낼때 사용-->
-        <q cite="https://ko.wikipedia.org/wiki/HTML">짧은 인용</q>
+        <q cite="https://ko.wikipedia.org/wiki/HTML">https://ko.wikipedia.org/wiki/HTML 짧은 인용</q>
         <br>
         <!--ins, del-->
         <!--ins 어떠한 내용을 새롭게 삽입-->
@@ -40,13 +40,13 @@
         <!--div 태그는 전체적으로 그룹을 나누는 태그-->
         <!--span 태그는 인라인 요소만 그룹을 나누는 태그-->
         <div class = "movie">
-            <h2>영화</h2>
-            <p>영화 <span>소개</span>내용</p>
+            <h2>영화로 그룹</h2>
+            <p>영화 <span>소개로 그룹</span> 내용</p>
         </div>
 
         <div class = "tv">
-            <h3>tv</h3>
-            <p>tv <span>소개</span>내용</p>
+            <h3>tv로 구름</h3>
+            <p>tv <span>소개로 그룹</span> 내용</p>
         </div>
         
 
@@ -67,8 +67,9 @@
         <!--dl 태그 무언가 설명할때 리스트-->
         <!--dt와 dd 태그를 사용하여 설명할 리스트 작성-->
         <dl>
-            <dt>dt태그는 설명의 주체</dt>
-            <dd>dd태그는 설명의 내용</dd>
+            <dt>설명의 주체 리스트</dt>
+            <dd>설명의 내용 리스트1</dd>
+            <dd>설명의 내용 리스트2</dd>
         </dl>
 
         <!--a 태그-->
